# clap-info-rs

./: .gitignore  Cargo.toml  README.md
src/: bundle_info.rs  clap_info_host.rs  clap_params.rs  clap_scanner.rs  info.rs  info_other_extensions.rs  info_params.rs  info_ports.rs  lib.rs  main.rs
