[package]
name = "clap-info-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
clack-host = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-host",
    "params",
] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
shellexpand = "3.1.0"
