[package]
name = "clap-info-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clap-info"
path = "bin/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
clack-host = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-host",
    "params",
    "audio-ports",
    "note-ports",
    "audio-ports-config",
    "event-registry",
    "gui",
    "latency",
    "log",
    "note-name",
    "note-ports",
    "params",
    "render",
    "state",
    "tail",
    "thread-check",
    "thread-pool",
    "timer",
    "voice-info",
] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
shellexpand = "3.1.0"
thiserror = "2.0.12"
